// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wallet should deploy 1`] = `
[
  {
    "$seq": 0,
    "events": [
      {
        "$type": "deploy",
      },
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "Deploy",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAqI0hiwSe0v-qYukU1E5NEX6gAb8Ojrd-WgzCJcetn8s93",
          "type": "internal",
          "value": 10000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4619n,
      },
    ],
  },
  {
    "$seq": 1,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "cell": "x{0000007B0000000001800B71D212D273ADB230C8D64D1A7F2E8285E880D2E2487C3E80E336C42E84DE084A04A817C800}
 x{820B8A3C23C10460E87A67DAAD3F23488EEF92966184DF661EEB0650701E2616A0609354DF656993A5BE7C5D52CBA9F4EC9DBF4DE0A006EB7AC44F5FD3B3DF05}",
            "type": "cell",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAqI0hiwSe0v-qYukU1E5NEX6gAb8Ojrd-WgzCJcetn8s93",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 8833n,
      },
      {
        "$type": "sent",
        "messages": [
          {
            "body": {
              "type": "empty",
            },
            "bounce": true,
            "from": "kQAqI0hiwSe0v-qYukU1E5NEX6gAb8Ojrd-WgzCJcetn8s93",
            "to": "@treasure(treasure)",
            "type": "internal",
            "value": 10000000000n,
          },
        ],
      },
    ],
  },
]
`;

exports[`wallet should deploy 2`] = `
[
  {
    "$seq": 2,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "text": "notify",
            "type": "text",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAqI0hiwSe0v-qYukU1E5NEX6gAb8Ojrd-WgzCJcetn8s93",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 4401n,
      },
    ],
  },
]
`;

exports[`wallet should deploy 3`] = `
[
  {
    "$seq": 3,
    "events": [
      {
        "$type": "received",
        "message": {
          "body": {
            "type": "empty",
          },
          "bounce": true,
          "from": "@treasure(treasure)",
          "to": "kQAqI0hiwSe0v-qYukU1E5NEX6gAb8Ojrd-WgzCJcetn8s93",
          "type": "internal",
          "value": 1000000000n,
        },
      },
      {
        "$type": "processed",
        "gasUsed": 3401n,
      },
    ],
  },
]
`;
